[gd_scene load_steps=5 format=3 uid="uid://iayl80byvmen"]

[ext_resource type="Script" path="res://scripts/tutorial_sign.gd" id="1_tutorial_sign"]

[sub_resource type="BoxMesh" id="BoxMesh_post"]
size = Vector3(0.2, 2.0, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_sign"]
size = Vector3(2.0, 1.0, 0.1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_interaction"]
radius = 2.0
height = 3.0

[node name="TutorialSign" type="Node3D"]
script = ExtResource("1_tutorial_sign")
message_text = "Welcome to the game!
Use WASD to move and Space to jump."
auto_show = true
show_duration = 5.0
interaction_radius = 2.0
font_size = 24

[node name="SignPost" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0, 0)
mesh = SubResource("BoxMesh_post")

[node name="SignBoard" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, 0)
mesh = SubResource("BoxMesh_sign")

[node name="SignLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
billboard = 1
modulate = Color(1, 1, 1, 0)
text = "Welcome!"
font_size = 24
outline_size = 8
outline_modulate = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
width = 400.0

[node name="InteractionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("CylinderShape3D_interaction")

[node name="PromptLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.0, 0)
billboard = 1
modulate = Color(1, 1, 1, 0)
text = "[E] Read Sign"
font_size = 18
outline_size = 6
outline_modulate = Color(0, 0, 0, 1)
horizontal_alignment = 1
